<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/T_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/actionsheet_top_normal"
        android:gravity="center"
        android:text="@string/pano_actionsheet_take_a_photo"
        android:textColor="#FD4A2E"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/T_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/actionsheet_bottom_normal"
        android:gravity="center"
        android:text="@string/pano_actionsheet_from_camera_roll"
        android:textColor="#FD4A2E"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/actionsheet_single_selector"
        android:gravity="center"
        android:text="@string/pano_sign_up_cancel"
        android:textColor="#037BFF"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>