<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.polites.android.GestureImageView
        android:id="@+id/loginBgImageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/loginLogoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/panoramics_logo"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <com.facebook.widget.LoginButton
            android:id="@+id/facebookAuthButton"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/pano_select_login_facebook"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/twitterBtn"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/p_twitter_l_bg"
            android:gravity="center"
            android:text="@string/pano_select_login_twitter"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/p_sign_up_with_your_eamil"
            android:gravity="center"
            android:text="@string/pano_select_login_with_email"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:background="@android:color/transparent"
            android:gravity="bottom|center_horizontal"
            android:text="@string/pano_select_login_have_account"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>